--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- style -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Aliveweb/style.css">
 
     <!-- fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,28 +94,28 @@
             </div>
             <div class="carousel-inner mt-5">
                 <div class="carousel-item active">
-                    <img src="/img/banner.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <img src="/Aliveweb/banner.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner1.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <img src="/Aliveweb/banner1.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner2.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <img src="/Aliveweb/banner2.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner3.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <img src="/Aliveweb/banner3.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Fourth slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -218,7 +218,7 @@
 
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 justify-content-center text-center" data-aos="fade-right" data-aos-offset="200">
-                    <img src="img/s4.jpg" alt="" class="img-fluid img-thumbnail"
+                    <img src="/Aliveweb/s4.jpg" alt="" class="img-fluid img-thumbnail"
                         style="border-radius: 200px 200px 200px 0;">
 
 
@@ -343,7 +343,7 @@
                 <div class="col-sm-12 col-md-4 text-center mb-2" data-aos="fade-right" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body">
-                            <img src="img/s4.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
+                            <img src="/Aliveweb/s4.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
                             <h5 class="card-title mt-2">Andrew</h5>
                             <p class="card-text">Front-end Developer
                             </p>
@@ -355,7 +355,7 @@
                 <div class="col-sm-12 col-md-4 text-center mb-2" data-aos="zoom-in" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body">
-                            <img src="img/s2.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
+                            <img src="/Aliveweb/s2.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
                             <h5 class="card-title mt-2">Karen D'souza</h5>
                             <p class="card-text">Back-end Developer
                             </p>
@@ -366,7 +366,7 @@
                 <div class="col-sm-12 col-md-4 text-center mb-2" data-aos="fade-left" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body">
-                            <img src="img/s3.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
+                            <img src="/Aliveweb/s3.jpg" alt="" class="img-fluid border rounded-circle border-primary p-2">
                             <h5 class="card-title mt-2">Kristina</h5>
                             <p class="card-text">Android Apps Developer
                             </p>
@@ -449,7 +449,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-6 justify-content-center text-center mt-3" data-aos="flip-right" data-aos-offset="200">
-                    <img src="img/s6.jpg" alt="" class="img-fluid img-thumbnail"
+                    <img src="/Aliveweb/s6.jpg" alt="" class="img-fluid img-thumbnail"
                         style="border-radius: 200px 0 200px 0;">
 
 
