--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- navbar -->
 
     <header id="home">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mx-5 border-bottom fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand fs-2 fw-bold" href="#"> Alive-<span class="text-primary">web</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
