--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css" class="css">
+    <link rel="stylesheet" href="/Aliveweb/style.css" class="css">
 
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -100,28 +100,28 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/banner.jpg" class="d-block w-100" alt="...">
+                    <img src="/Aliveweb/banner.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner1.jpg" class="d-block w-100" alt="...">
+                    <img src="/Aliveweb/banner1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner2.jpg" class="d-block w-100" alt="...">
+                    <img src="/Aliveweb/banner2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/banner3.jpg" class="d-block w-100" alt="...">
+                    <img src="/Aliveweb/banner3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -218,7 +218,7 @@
 
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end" data-aos="fade-right" data-aos-offset="200">
-                    <img src="img/s4.jpg" alt="" class="img-fluid img-thumbnail">
+                    <img src="/Aliveweb/s4.jpg" alt="" class="img-fluid img-thumbnail">
 
 
                 </div>
@@ -424,7 +424,7 @@
                  </div>
 
                  <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end" data-aos="fade-right" data-aos-offset="200">
-                    <img src="img/s6.jpg" alt="" class="img-fluid img-thumbnail">
+                    <img src="/Aliveweb/s6.jpg" alt="" class="img-fluid img-thumbnail">
 
 
                 </div>
