--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-2" data-aos="zoom-in-up" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body text-center">
-                            <img src="img/s4.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
+                            <img src="/Aliveweb/s4.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
                             <h5 class="card-title mt-4">Andrew</h5>
                             <p class="card-text">Front-end developer</p>
                             <a href="#" class="btn btn-primary"> Read more</a>
@@ -334,7 +334,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-2" data-aos="zoom-in" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body text-center">
-                            <img src="img/s2.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
+                            <img src="/Aliveweb/s2.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
                             <h5 class="card-title mt-4">Karen D'souza</h5>
                             <p class="card-text">Back-end developer</p>
                             <a href="#" class="btn btn-primary"> Read more</a>
@@ -345,7 +345,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-2" data-aos="zoom-in-down" data-aos-offset="200">
                     <div class="card">
                         <div class="card-body text-center">
-                            <img src="img/s3.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
+                            <img src="/Aliveweb/s3.jpg" alt="" class="img-fluid rounded-circle border  border-primary p-2">
                             <h5 class="card-title mt-4">Kristina</h5>
                             <p class="card-text">Android Apps Developer</p>
                             <a href="#" class="btn btn-primary"> Read more</a>
