--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#services">Web Developement</a></li>
                                 <li><a class="dropdown-item" href="#services">Apps Developement</a></li>
-                                <li><a class="dropdown-item" href="#">Software Developement</a></li>
+                                <li><a class="dropdown-item" href="#services">Software Developement</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
